...
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="16dp">

		<TextView
			android:id="@+id/input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="50dp"
			android:text="@{vm.input}"
			android:textSize="50sp"
			app:layout_constraintEnd_toEndOf="parent"
...
			<Button
				android:id="@+id/remove"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_rowWeight="1"
				android:layout_columnWeight="1"
				android:text="지우기"
				android:onClick="@{() -> vm.removeLastInput()}"
				android:textSize="18sp" />

			<Button
				android:id="@+id/num_0"
				android:layout_width="wrap_content"
...
